spring-data-jpa/src/main/java/ru/sabitov/example/error/FieldErrorDescription.java
package ru.sabitov.example.error;

public record FieldErrorDescription(String field, String message) {
}
